==> fishpepper/OpenGround/src/frsky.c <==
#include "main.h"
#include <string.h>
#include <stdio.h>
#include "frsky.h"
#include "debug.h"
#include "timeout.h"
#include "led.h"
#include "delay.h"
#include "wdt.h"
#include "cc2500.h"
#include "io.h"
#include "storage.h"
#include "adc.h"
#include "telemetry.h"
#include "stm32f0xx_tim.h"
#include "stm32f0xx_misc.h"
#define FRSKY_DEBUG_BIND_DATA 0
#define FRSKY_DEBUG_HOPTABLE 1
#define MAX_BIND_PACKET_COUNT 10
#define HOPDATA_RECEIVE_DONE ((1  <<  (MAX_BIND_PACKET_COUNT))-1)

void frsky_init_timer(void) {
    // init timer3 for 9ms
    TIM_TimeBaseInitTypeDef timebase_init;
    TIM_OCInitTypeDef oc_init;
    NVIC_InitTypeDef nvic_init;

    // pre-initialise structs
    TIM_TimeBaseStructInit(&timebase_init);
    TIM_OCStructInit(&oc_init);

    // TIM3 clock enable
    RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM3, ENABLE);

    // Enable the TIM3 gloabal Interrupt
    nvic_init.NVIC_IRQChannel         = TIM3_IRQn;
    nvic_init.NVIC_IRQChannelPriority = NVIC_PRIO_FRSKY;
    nvic_init.NVIC_IRQChannelCmd      = ENABLE;
    NVIC_Init(&nvic_init);

    // compute prescaler value
    // we want one ISR every 9ms
    // setting TIM_Period to 9000 will reuqire
    // a prescaler so that one timer tick is 1us (1MHz)
    uint16_t prescaler = (uint16_t) (SystemCoreClock  / 1000000) - 1;

    // time base configuration as calculated above
    // timer counts with 1MHz thus 9000 ticks = 9ms
    timebase_init.TIM_Period        = 9000-1;
    timebase_init.TIM_Prescaler     = prescaler;
    timebase_init.TIM_ClockDivision = 0;
    timebase_init.TIM_CounterMode   = TIM_CounterMode_Up;
    TIM_TimeBaseInit(TIM3, &timebase_init);

    // should be done by timebaseinit...
    // TIM_PrescalerConfig(TIM3, prescaler, TIM_PSCReloadMode_Immediate);

    // TIM Interrupts enable
    // DO NOT ENABLE IT YET
    // TIM_ITConfig(TIM3, TIM_IT_Update, ENABLE);

    // TIM3 enable counter
    TIM_Cmd(TIM3, ENABLE);
}

void frsky_tx_set_enabled(uint32_t enabled) {
    // TIM Interrupts enable? -> tx active
    if (enabled) {
        frsky_frame_counter = 0;
        frsky_state = 0;
        TIM_ITConfig(TIM3, TIM_IT_Update, ENABLE);
    } else {
        // stop ISR
        TIM_ITConfig(TIM3, TIM_IT_Update, DISABLE);
        // make sure last packet was sent
        delay_ms(20);
    }
}

void TIM3_IRQHandler(void) {
    if (TIM_GetITStatus(TIM3, TIM_IT_Update) != RESET) {
        TIM_ClearITPendingBit(TIM3, TIM_IT_Update);

        // when will there be the next isr?
        switch (frsky_state) {
            default:
            case (0) :
                // process any incoming telemetry data
                frsky_receive_packet();
                // hop to next channel
                frsky_increment_channel(1);
                // send data
                frsky_send_packet();
                frsky_frame_counter++;
                // next hop in 9ms
                TIM_SetAutoreload(TIM3, 9000-1);
                frsky_state = 1;
                break;

            case (1) :
                // hop to next channel
                frsky_increment_channel(1);
                // send data
                frsky_send_packet();
                frsky_frame_counter++;
                // next hop in 9ms
                TIM_SetAutoreload(TIM3, 9000-1);
                frsky_state = 2;
                break;

            case (2) :
                // hop to next channel
                frsky_increment_channel(1);
                // send data
                frsky_send_packet();
                frsky_frame_counter++;
                // after this tx we expect rx data,
                // TX is finished after ~7.2ms -> next isr in 7.5ms
                TIM_SetAutoreload(TIM3, 7500-1);
                frsky_state = 3;
                break;

            case (3) :
                // prepare for data receiption, hop to next channel
                frsky_increment_channel(1);
                // enable LNA
                cc2500_enter_rxmode();
                // the next hop will now in 1.3ms (after freq stabilised)
                TIM_SetAutoreload(TIM3, 1300-1-0*200);
                frsky_state = 4;
                break;

            case (4) :
                // now go to RX mode
                // go to idle
                cc2500_strobe(RFST_SRX);
                // increment framecounter
                frsky_frame_counter++;
                // the next hop will now in 9.2ms
                // 2*9 = 18 = 7.5 + 1.3 + 9.2
                TIM_SetAutoreload(TIM3, 9200-1+0*200);
                frsky_state = 0;
                break;

            case (0x80) :
                // bind mode, set timeout to 9ms
                TIM_SetAutoreload(TIM3, 9000);

                // get bind packet index
                frsky_frame_counter++;
                if ((frsky_frame_counter * 5) > FRSKY_HOPTABLE_SIZE) {
                    frsky_frame_counter = 0;
                }

                // send bind packet
                frsky_send_bindpacket(frsky_frame_counter);
                frsky_state = 0x80;
                break;
        }
    }
}
