==> jimmyw/OpenGround/src/frsky.c <==
#include "main.h"
#include <string.h>
#include <stdio.h>
#include "frsky.h"
#include "debug.h"
#include "timeout.h"
#include "led.h"
#include "delay.h"
#include "wdt.h"
#include "cc2500.h"
#include "io.h"
#include "clocksource.h"
#include "storage.h"
#include "adc.h"
#include "telemetry.h"
#include <libopencm3/stm32/timer.h>
#define FRSKY_DEBUG_BIND_DATA 1
#define FRSKY_DEBUG_HOPTABLE 1
#define MAX_BIND_PACKET_COUNT 10
#define HOPDATA_RECEIVE_DONE ((1  <<  (MAX_BIND_PACKET_COUNT))-1)

void frsky_init_timer(void) {
    // TIM3 clock enable
    rcc_periph_clock_enable(RCC_TIM3);

    // init timer3 for 9ms
    timer_reset(TIM3);

    // enable the TIM3 gloabal Interrupt
    nvic_enable_irq(NVIC_TIM3_IRQ);
    nvic_set_priority(NVIC_TIM3_IRQ, NVIC_PRIO_FRSKY);

    // compute prescaler value
    // we want one ISR every 9ms
    // setting TIM_Period to 9000 will reuqire
    // a prescaler so that one timer tick is 1us (1MHz)
    uint16_t prescaler = (uint16_t) (rcc_timer_frequency  / 1000000) - 1;

    // time base as calculated above
    timer_set_prescaler(TIM3, prescaler);
    timer_set_mode(TIM3, TIM_CR1_CKD_CK_INT, TIM_CR1_CMS_EDGE, TIM_CR1_DIR_UP);
    // timer should count with 1MHz thus 9000 ticks = 9ms
    timer_set_period(TIM3, 9000-1);

    // DO NOT ENABLE INT yet!

    // enable timer
    timer_enable_counter(TIM3);
}

void frsky_tx_set_enabled(uint32_t enabled) {
    // TIM Interrupts enable? -> tx active
    if (enabled) {
        frsky_frame_counter = 0;
        frsky_state = 0;
        // enable ISR
        timer_enable_irq(TIM3, TIM_DIER_UIE);
    } else {
        // stop ISR
        timer_disable_irq(TIM3, TIM_DIER_UIE);
        // make sure last packet was sent
        delay_ms(20);
    }
}

void TIM3_IRQHandler(void) {
    if (timer_get_flag(TIM3, TIM_SR_UIF)) {
        // clear flag (NOTE: this should never be done at the end of the ISR)
        timer_clear_flag(TIM3, TIM_SR_UIF);
   
        // Fetch last adc value
        adc_process();

        // when will there be the next isr?
        switch (frsky_state) {
            default:
            case (0) :
                // process any incoming telemetry data
                frsky_receive_packet();
                // hop to next channel
                frsky_increment_channel(1);
                // send data
                frsky_send_packet();
                frsky_frame_counter++;
                // next hop in 9ms
                timer_set_period(TIM3, 9000-1);
                frsky_state = 1;
                break;

            case (1) :
                // hop to next channel
                frsky_increment_channel(1);
                // send data
                frsky_send_packet();
                frsky_frame_counter++;
                // next hop in 9ms
                timer_set_period(TIM3, 9000-1);
                frsky_state = 2;
                break;

            case (2) :
                // hop to next channel
                frsky_increment_channel(1);
                // send data
                frsky_send_packet();
                frsky_frame_counter++;
                // after this tx we expect rx data,
                // TX is finished after ~7.2ms -> next isr in 7.5ms
                timer_set_period(TIM3, 7500-1);
                frsky_state = 3;
                break;

            case (3) :
                // prepare for data receiption, hop to next channel
                frsky_increment_channel(1);
                // enable LNA
                cc2500_enter_rxmode();
                // the next hop will now in 1.3ms (after freq stabilised)
                timer_set_period(TIM3, 1300-1-0*200);
                frsky_state = 4;
                break;

            case (4) :
                // now go to RX mode
                // go to idle
                cc2500_strobe(RFST_SRX);
                // increment framecounter
                frsky_frame_counter++;
                // the next hop will now in 9.2ms
                // 2*9 = 18 = 7.5 + 1.3 + 9.2
                timer_set_period(TIM3, 9200-1+0*200);
                frsky_state = 0;
                break;

            case (0x80) :
                // bind mode, set timeout to 9ms
                timer_set_period(TIM3, 9000);

                // get bind packet index
                frsky_frame_counter++;
                if ((frsky_frame_counter * 5) > FRSKY_HOPTABLE_SIZE) {
                    frsky_frame_counter = 0;
                }

                // send bind packet
                frsky_send_bindpacket(frsky_frame_counter);
                frsky_state = 0x80;
                break;
        }
    }
}
